--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -33,47 +33,15 @@ subnet 192.168.2.0 netmask 255.255.255.0 {
   range 192.168.2.111 192.168.2.150;
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns;
-  option routers freenet_router2;
-  #option routers freenet_router;
-}
-
-
-
-host tomm164 {
-  hardware ethernet 00:c0:ca:4a:a7:6e;
-  fixed-address 192.168.2.164;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  #option routers freenet_router2;
 }
 
-host helge162 {
-  hardware ethernet 78:92:9c:19:30:46;
-  fixed-address 192.168.2.162;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
-}
+
 
 host harry168 {
   hardware ethernet 00:1f:16:74:b4:45;
   fixed-address 192.168.2.168;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
-}
-
-host helge163 {
-  hardware ethernet d0:df:9a:1c:42:50;
-  fixed-address 192.168.2.163;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
-}
-
-host dessy165 {
-  hardware ethernet c4:46:19:44:7d:2a;
-  fixed-address 192.168.2.165;
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
@@ -127,14 +95,6 @@ host Raj172 {
   option routers freenet_router;
 }
 
-host dessy166 {
-  hardware ethernet c4:46:19:6b:7a:6e;
-  fixed-address 192.168.2.166;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
-}
-
 host Scott175 {
   hardware ethernet 00:15:af:77:69:b3;
   fixed-address 192.168.2.175;
@@ -146,6 +106,38 @@ host Scott175 {
 host Scott176 {
   hardware ethernet 00:26:37:e1:8a:17;
   fixed-address 192.168.2.176;
+  option broadcast-address 192.168.2.255;
+  option domain-name-servers freenet_dns,opendns1,opendns2;
+  option routers freenet_router;
+}
+
+host Raj184 {
+  hardware ethernet c4:17:fe:89:87:14;
+  fixed-address 192.168.2.184;
+  option broadcast-address 192.168.2.255;
+  option domain-name-servers freenet_dns,opendns1,opendns2;
+  option routers freenet_router;
+}
+
+host Raj185 {
+  hardware ethernet 70:5a:b6:2d:98:35;
+  fixed-address 192.168.2.185;
+  option broadcast-address 192.168.2.255;
+  option domain-name-servers freenet_dns,opendns1,opendns2;
+  option routers freenet_router;
+}
+
+host Scott250 {
+  hardware ethernet 00:1d:7d:99:ce:42;
+  fixed-address 192.168.2.250;
+  option broadcast-address 192.168.2.255;
+  option domain-name-servers freenet_dns,opendns1,opendns2;
+  option routers freenet_router;
+}
+
+host raj183 {
+  hardware ethernet f0:a2:25:c1:24:09;
+  fixed-address 192.168.2.183;
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
