--- a/fairnat.config
+++ b/fairnat.config
@@ -292,4 +292,4 @@ FAIRNAT_PREFIX="FAIRNAT"
 # I also see 124@200kbit is now maxed at 100kB/sec in wireshark filter graph view only for the first 6 secounds then 50kb
 # 100 secounds to restart with ./masq.sh
 
-USERS="164@2000kbit|2000kbit 162@2000kbit|2000kbit 168@2000kbit|2000kbit 163@2000kbit|2000kbit 165@2000kbit|2000kbit 169@2000kbit|2000kbit 161@2000kbit|2000kbit 167@2000kbit|2000kbit 174@2000kbit|2000kbit 171@2000kbit|2000kbit 172@2000kbit|2000kbit 166@2000kbit|2000kbit 175@2000kbit|2000kbit 176@2000kbit|2000kbit "
+USERS="168@2000kbit|2000kbit 169@2000kbit|2000kbit 161@2000kbit|2000kbit 167@2000kbit|2000kbit 174@2000kbit|2000kbit 171@2000kbit|2000kbit 172@2000kbit|2000kbit 175@2000kbit|2000kbit 176@2000kbit|2000kbit 184@2000kbit|2000kbit 185@2000kbit|2000kbit 250@3000kbit|3000kbit 183@2000kbit|2000kbit "
