--- a/dhcpd.conf.template
+++ b/dhcpd.conf.template
@@ -28,6 +28,9 @@ log-facility local7;
 # No service will be given on this subnet, but declaring it helps the 
 # DHCP server to understand the network topology.
 
+allow booting;
+allow bootp;
+
 
 subnet 192.168.2.0 netmask 255.255.255.0 {
   range 192.168.2.111 192.168.2.150;
@@ -35,6 +38,8 @@ subnet 192.168.2.0 netmask 255.255.255.0 {
   option domain-name-servers freenet_dns;
   option routers freenet_router;
   #option routers freenet_router2;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 
