reorganize file location to subdir ruby to prepare to add more files

--- a/ruby/dhcpd.conf
+++ b/ruby/dhcpd.conf
@@ -28,6 +28,9 @@ log-facility local7;
 # No service will be given on this subnet, but declaring it helps the 
 # DHCP server to understand the network topology.
 
+allow booting;
+allow bootp;
+
 
 subnet 192.168.2.0 netmask 255.255.255.0 {
   range 192.168.2.111 192.168.2.150;
@@ -35,6 +38,8 @@ subnet 192.168.2.0 netmask 255.255.255.0 {
   option domain-name-servers freenet_dns;
   option routers freenet_router;
   #option routers freenet_router2;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 
@@ -45,6 +50,8 @@ host harry168 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 host karen169 {
@@ -53,6 +60,8 @@ host karen169 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 host gert161 {
@@ -61,6 +70,8 @@ host gert161 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 host Raj167 {
@@ -69,6 +80,8 @@ host Raj167 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 host Scott174 {
@@ -77,22 +90,8 @@ host Scott174 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
-}
-
-host Glenn171 {
-  hardware ethernet bc:ae:c5:52:1c:f0;
-  fixed-address 192.168.2.171;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
-}
-
-host Raj172 {
-  hardware ethernet 34:51:c9:9c:e2:16;
-  fixed-address 192.168.2.172;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 host Scott175 {
@@ -101,6 +100,8 @@ host Scott175 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 host Scott176 {
@@ -109,22 +110,8 @@ host Scott176 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
-}
-
-host Raj184 {
-  hardware ethernet c4:17:fe:89:87:14;
-  fixed-address 192.168.2.184;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
-}
-
-host Raj185 {
-  hardware ethernet 70:5a:b6:2d:98:35;
-  fixed-address 192.168.2.185;
-  option broadcast-address 192.168.2.255;
-  option domain-name-servers freenet_dns,opendns1,opendns2;
-  option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
 host Scott250 {
@@ -133,12 +120,46 @@ host Scott250 {
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
 
-host raj183 {
-  hardware ethernet f0:a2:25:c1:24:09;
-  fixed-address 192.168.2.183;
+host Nils189 {
+  hardware ethernet 60:eb:69:72:9a:b8;
+  fixed-address 192.168.2.189;
   option broadcast-address 192.168.2.255;
   option domain-name-servers freenet_dns,opendns1,opendns2;
   option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
+}
+
+host Raj186 {
+  hardware ethernet 38:60:77:b0:45:1d;
+  fixed-address 192.168.2.186;
+  option broadcast-address 192.168.2.255;
+  option domain-name-servers freenet_dns,opendns1,opendns2;
+  option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
+}
+
+host Scott187 {
+  hardware ethernet 00:1e:8c:c2:75:5b;
+  fixed-address 192.168.2.187;
+  option broadcast-address 192.168.2.255;
+  option domain-name-servers freenet_dns,opendns1,opendns2;
+  option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
+}
+
+host gert188 {
+  hardware ethernet 90:e6:ba:47:4c:d5;
+  fixed-address 192.168.2.188;
+  option broadcast-address 192.168.2.255;
+  option domain-name-servers freenet_dns,opendns1,opendns2;
+  option routers freenet_router;
+  filename "pxelinux.0";
+  next-server 192.168.2.112;
 }
